# comic-be

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt
comic_be/: asgi.py  settings.py  urls.py  wsgi.py
comic_be/apps/comic/: apps.py  models.py  serializers.py  urls.py  views.py
comic_be/apps/comic/migrations/: 0001_initial.py  0002_alter_author_name.py  0002_initial.py  0003_comic_background_image_alter_comic_image.py  0004_history_comic.py  0005_alter_author_des.py  0006_comic_preview_image.py  0007_alter_comic_updated_at.py  0008_remove_comic_like_remove_comic_rating_comic_reviews.py
comic_be/apps/comic/models_container/: __init__.py  author.py  chapter.py  comic.py  enum_type.py  history.py  user_comic.py
comic_be/apps/comic/routers/: author.py  chapter.py  comic.py
comic_be/apps/comic/serializers_container/: __init__.py  author.py  chapter.py  comic.py
comic_be/apps/comic/utils/: constants.py  permission.py  preview_image.py  shuffle_img.py  valid_data.py
comic_be/apps/comic/views_container/: __init__.py  author.py  chapter.py  comic.py  filter.py
comic_be/apps/core/: minio_cli.py
comic_be/apps/user/: apps.py  models.py  urls.py  views.py
comic_be/apps/user/migrations/: 0001_initial.py
comic_be/apps/user/serializers_container/: auth_socials.py  history.py  user_comic.py
comic_be/apps/user/views_container/: adapters.py  auth_socials.py  filter.py  history.py  user_comic.py
